<resources>
    <string name="app_name">SICRE</string>

    <string name="chargement">Veuillez Patienter SVP</string>

    <string name="action_settings">Settings</string>
    <string name="hint_username"><b>Nom d\'Utilisateur</b></string>
    <string name="hint_password"><b>Mot de passe</b></string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_username">Nom d\'Utilisateur Invalide</string>
    <string name="err_msg_password">Mot de Passe Invalide</string>
    <string name="connection_error">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!--<string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>-->

    <string name="action_example">Example action</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="footer_message">\u00a9 SED | SICRE | 2017- All Rights Reserved</string>
    <string name="copyright">\u00a9 ARMP | Direction des Systèmes d\'Information | 2016 - All Rights Reserved</string>
    <string name="honneur_fidelite">Honneur et Fidelite</string>
    <string name="recherche">Recherche</string>
    <string name="perquisition">Perquisition</string>
    <string name="enregistrement">Enregistrement</string>
    <string name="alert">Alert</string>
    <string name="btn_chercher_individu">Recherche d\'individu</string>
    <string name="btn_chercher_vehicule">Recherche De Vehicule</string>
    <string name="btn_chercher_objet">Rechercher d\'Objet</string>
    <string name="stay_connected">Rester Connecte:</string>
    <string name="critere_de_recherche">Critere de recherche</string>
    <string name="hint_mot_cle">Mot Cle</string>
    <string name="connexion">Connexion</string>
    <string name="search">Chercher</string>
    <string name="aucun_individu_trouve">Aucun individu trouve</string>
    <string name="nombre_trouve">Nombre Trouve</string>
    <string name="nom">Nom: </string>
    <string name="prenom">Prenom: </string>
    <string name="alias">Alias: </string>
    <string name="civilite">Civilite: </string>
    <string name="date_naissance">Date de Naissance: </string>
    <string name="lieu_naissance">Lieu Naissance: </string>
    <string name="pere">Pere: </string>
    <string name="mere">Mere: </string>
    <string name="raison">Raison: </string>
    <string name="monsieur">Monsieur</string>
    <string name="madame">Madame</string>
    <string name="invalide_data">Donnee invalide</string>
    <string name="titre">Titre: </string>
    <string name="sujet">Sujet: </string>
    <string name="description">Description: </string>
    <string name="chassie">Chassie/Serie: </string>
    <string name="matricule">Matricule: </string>
    <string name="date_creation">Date Creation: </string>
    <string name="frabricant">Fabricant: </string>
    <string name="marque">Marque: </string>
    <string name="signal">Signaler</string>
    <string name="refresh">Rafraichir</string>
    <string name="liste_perquisition_title">Liste des Perquisitions</string>
    <string name="text">Text</string>
    <string name="image">Image</string>
    <string name="son">Sound</string>
    <string name="video">Video</string>
    <string name="add_text_prouf">+ Ajouter</string>
    <string name="text_hint">Saisissez votre texte ici ...</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="enregistrement_preuve_txt">Enregistrement de preuve text</string>
    <string name="no_camera_feature">Votre dispositif n\'a pas de camera video</string>
    <string name="liste_affaire_title">Liste des Affaires</string>
    <string name="add_affaire">+ Ajouter Aff.</string>
    <string name="hint_affaire">Affaire</string>
    <string name="hint_affaire_desc">Description</string>
    <string name="individu">Individu</string>
    <string name="vehicule">Hevicule</string>
    <string name="autres">Autres</string>
    <string name="creer">Creer</string>
    <string name="hint_name">Nom: </string>
    <string name="hint_surname">Prenom: </string>
    <string name="hint_doc_type">Type de Document: </string>
    <string name="hint_doc_number">Numero de Document: </string>
    <string name="hint_raison">Raison: </string>
    <string name="enregistrement_en_cours">Enregistrement en cours...</string>
    <string name="an_error_occure">Une erreur est survenue</string>
    <string name="yes_internet">Connecte</string>
    <string name="no_internet">Pas de Connexion Internet</string>
    <string name="verify_connection">Dispositif Deconnecte. Verifier que vous etes connecte et reessayer.</string>
    <string name="status">Statut: </string>
    <string name="pays_dorigine">Pays d\'Origine: </string>
    <string name="profession">Profession: </string>
    <string name="antecedent">Antecedent: </string>
    <string name="cni">CNI: </string>
    <string name="cni_date">Delivre Le: </string>
    <string name="cni_expire">Expire Le: </string>
    <string name="cni_autorite">Delivre Par: </string>
    <string name="save">Sauvegarder</string>
    <string name="description_lieu">Description des lieux</string>
    <string name="successful_saved">Sauvegarder Avec Succes</string>
    <string name="btn_enregistrer_individu">Enregistrer Individu</string>
    <string name="btn_enregistrer_vehicule">Enregistrer Vehicule</string>
    <string name="btn_enregistrer_objet">Enregistrer un Objet</string>
    <string name="btn_enregistrer_affaire">Enregistrer Affaire</string>
    <string name="hint_proprietaire">Proprietaire</string>
    <string name="hint_name_chauffeur">Nom et Prenom Chauffeur</string>
    <string name="hint_immatriculation">Num. Matricule</string>
    <string name="hint_chassie">Num. Chassie</string>
    <string name="hint_marque">Marque</string>
    <string name="hint_titre">Titre</string>
    <string name="hint_couleur">Couleur</string>
    <string name="hint_matiere">Matiere</string>
    <string name="hint_description">Description</string>
    <string name="photo">Photo</string>
    <string name="you_mustgrant_permission">Vous devez donner des permisssion</string>
    <string name="default_notification_channel_id">aaaaaaaaaa</string>
    <string name="libele">Libele: </string>
    <string name="num_avis">Num. Avis: </string>
    <string name="carte_grise">Carte Grise: </string>
    <string name="puissance">Puissance: </string>
    <string name="kilometrage">Kilometrage: </string>
    <string name="num_assurance">Num. Assurance: </string>
    <string name="alerter">Alerter</string>
    <string name="liste_alert_title">Liste des Alertes</string>
    <string name="hint_message">Message</string>
    <string name="successful_signal">Signaler Avec Succes</string>
    <string name="failed">Echec</string>
    <string name="hint_carte_grise">Carte Grise</string>
    <string name="err_name">Nom invalide</string>
    <string name="err_surname">Prenom invalide</string>
    <string name="err_num_doc">Numero Invalide</string>
    <string name="err_num_raison">Raison Invalide</string>
    <string name="not_autorized">Vous n\'etes pas autorises</string>


    <string-array name="critere_recherche_individu">
        <item>nom</item>
        <item>prenom</item>
        <item>cni</item>
        <item>numero passeport</item>
        <!--<item>Numero Permis Sejour</item>
        <item>Numero Carte Sejour</item>-->
        <item>alias</item>
    </string-array>

    <string-array name="critere_recherche_vehicule">
        <item>Matricule</item>
        <item>Numero de Chassie</item>
        <item>Numero Carte Grise</item>
        <item>Proprietaire</item>
        <item>Marque</item>
    </string-array>

    <string-array name="critere_recherche_objet">
        <item>Nom De l\'Objet</item>
        <item>Reference</item>
        <item>Proprietaire</item>
    </string-array>

</resources>
