<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cm.mindef.sed.sicre.mobile.EnregistrerIndividuActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout"
        android:textAllCaps="false">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@color/colorPrimaryDark"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:textAllCaps="false"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appBarLayout">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="16dp"
            android:layout_below="@id/appBarLayout"
            android:paddingBottom="100dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:src="@drawable/icons8_sent_24"
                android:layout_marginTop="21dp"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:layout_marginBottom="-5dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/EditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/EditText_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_surname" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/hint_doc_type"
                android:layout_marginBottom="20dp"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_type_doc_enreg_individu"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_dropdown"/>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_doc_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/EditText_doc_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_doc_number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_doc_raison"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/EditText_doc_raison"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_raison" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/error_message"
                android:textColor="@android:color/holo_red_light"/>

            <Button android:id="@+id/btn_photo_individu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:background="@drawable/background_button_white"
                android:layout_marginTop="40dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:drawableLeft="@drawable/icons8_vintage_camera_24"
                android:drawablePadding="3dp"
                android:textAllCaps="false"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:id="@+id/photo_individu"/>

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/progress_save"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <Button android:id="@+id/btn_enregistrer_individu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer"
                android:background="@drawable/background_button_white"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:textAllCaps="false"/>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/footer_my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_margin="0dp"
        android:padding="0dp">

        <TextView
            android:text="@string/footer_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            />
    </RelativeLayout>

</RelativeLayout>
