<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cm.mindef.sed.sicre.mobile.HomeActivity">



    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="100dp"
            android:layout_below="@id/appBarLayout"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/networState_logger"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/error_message"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="50dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/EditText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/TextInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/EditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox android:id="@+id/checkbox_stay_connected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stay_connected"
                android:onClick="togleStayConnected"/>

            <Button android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connexion"
                android:background="@drawable/background_button"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:textAlignment="center" />


            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/wall_paper">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/gendarmerie"/>
            </LinearLayout>-->

        </LinearLayout>
    </ScrollView>


    <RelativeLayout
        android:id="@+id/footer_my"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:layout_margin="0dp"
        android:padding="0dp">

        <TextView
            android:text="@string/footer_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            />
    </RelativeLayout>

</RelativeLayout>
